<resources>
    <string name="app_name">QianLiYan</string>

    <!-- Main -->
    <string name="main_device_address">"Device Address"</string>
    <string name="main_description">"http://DEVICE_ADDRESS:8000"</string>
    <string name="menu_settings">Settings</string>

    <string name="label_status">"Status"</string>
    <string name="status_start">"Start"</string>
    <string name="status_starting">"Starting&#8230;"</string>
    <string name="status_stop">"Stop"</string>
    <string name="status_stopping">"Stopping&#8230;"</string>
    <string name="button_start">"Start"</string>
    <string name="button_stop">"Stop"</string>

    <!-- Notification -->
    <string name="notify_channel_server_status">"Server status"</string>
    <string name="notify_channel_server_status_description">"Notifications for showing server running status"</string>
    <string name="notify_ready">"Ready"</string>
    <string name="notify_busy">"Busy"</string>
    <string name="notify_button_close">"Close"</string>
    <string name="notify_button_stop">"Stop"</string>

    <!-- Notification Request MediaProjection -->
    <string name="notify_channel_capture_request">"Connection request"</string>
    <string name="notify_channel_capture_request_description">"Notifications for connect request"</string>
    <string name="notify_projection_request_title">"Connection Request"</string>
    <string name="notify_projection_request_content">"A remote user wants to connect to this device."</string>
    <string name="notify_projection_request_countdown">"(This request will expire in %1$d seconds)"</string>
    <string name="notify_projection_request_deny_btn">"Reject"</string>
    <string name="notify_projection_request_accept_btn">"Allow"</string>
    <string name="notify_projection_request_default_allowed_response">"If not responded, the connection will be allowed."</string>
    <string name="notify_projection_request_default_reject_response">"If not responded, the connection will be rejected."</string>

    <!-- Preference -->
    <string name="prefs_category_general_title">"General"</string>
    <string name="prefs_category_general_key" translatable="false">"CATEGORY_GENERAL"</string>
    <string name="prefs_category_experimental_title">"Experimental"</string>
    <string name="prefs_category_experimental_key" translatable="false">CATEGORY_EXPERIMENTAL</string>
    <string name="prefs_category_development_title">"Development"</string>
    <string name="prefs_category_development_key" translatable="false">CATEGORY_DEVELOPMENT</string>
    <string name="prefs_category_about_title">"About"</string>
    <string name="prefs_category_about_key" translatable="false">CATEGORY_ABOUT</string>

    <string name="prefs_about_key" translatable="false">KEY_ABOUT</string>
    <string name="prefs_version_key" translatable="false">KEY_VERSION</string>
    <string name="prefs_development_key" translatable="false">KEY_DEVELOPMENT</string>
    <string name="prefs_experimental_key" translatable="false">KEY_EXPERIMENTAL</string>

    <string name="prefs_video_resolution_key" translatable="false">KEY_VIDEO_RESOLUTION</string>
    <string name="prefs_video_resolution_title">"Video resolution"</string>
    <string name="prefs_video_resolution_summary" translatable="false">"%1$s"</string>

    <string name="prefs_rtmp_key" translatable="false">KEY_RTMP_ENABLE</string>
    <string name="prefs_rtmp_title">"Enable RTMP upstream"</string>
    <string name="prefs_rtmp_summary">"Encode H264 video and upload to nginx stream server."</string>

    <string name="prefs_rtmp_server_key" translatable="false">KEY_RTMP_SERVER</string>
    <string name="prefs_rtmp_server_title">"RTMP server url"</string>
    <string name="prefs_rtmp_server_summary" translatable="false">"%1$s"</string>

    <string name="prefs_unique_id_key" translatable="false">KEY_UNIQUE_ID</string>

    <!-- About -->
    <string name="about_app_summary">"© 2020 RexStudio All rights reserved."</string>
    <string name="about_version_title">"Version"</string>
    <string name="about_version_summary" translatable="false">"%1$s r%2$d"</string>
    <string name="about_toast_experimental">"Press %1$d more time(s) to enable experimental setting"</string>
    <string name="about_toast_experimental_on">"Already enabled experimental settings"</string>
    <string name="about_toast_development_on">"Already enabled development settings"</string>

</resources>
